...
            "state" : "translated",
            "value" : "Crayon de cire"
          }
        }
      }
    },
    "Create" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erstellen"
          }
...
            "state" : "translated",
            "value" : "Bleu marine"
          }
        }
      }
    },
    "New" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neu"
          }
...
